Elastic: Fix dark mode issues in Help plugin and attachment preview

--- a/skins/elastic/styles/dark.less
+++ b/skins/elastic/styles/dark.less
@@ -176,6 +176,7 @@ html.dark-mode {
         }
     }
 
+    pre,
     .popover .menu li a[aria-haspopup]::after,
     .menu.pagenav .pagenav-text,
     .menu.pagenav a {
@@ -671,6 +672,11 @@ html.dark-mode {
             color: @color-dark-hint;
             border-color: @color-dark-border;
         }
+    }
+
+    // Attachment preview
+    #messagepartframe {
+        background: #fff;
     }
 
     // ----------------------------------
